@@ -2,6 +2,8 @@ package com.slyko.cashitoinfra.adapter.spi;
 
 import com.slyko.cashitoapplication.domain.Deal;
 import com.slyko.cashitoapplication.domain.Product;
+import com.slyko.cashitoapplication.exception.DealNotFoundException;
+import com.slyko.cashitoapplication.exception.UnexpectedDealVersionException;
 import com.slyko.cashitoapplication.port.out.DealsSecondaryPort;
 import com.slyko.cashitoinfra.adapter.spi.entity.ProductEntity;
 import com.slyko.cashitoinfra.adapter.spi.mapper.DealMapper;
@@ -9,7 +11,9 @@ import com.slyko.cashitoinfra.adapter.spi.mapper.ProductMapper;
 import com.slyko.cashitoinfra.adapter.spi.repository.DealReactiveRepository;
 import com.slyko.cashitoinfra.adapter.spi.repository.ProductReactiveRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
@@ -20,16 +24,35 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class DealDbAdapter implements DealsSecondaryPort {
 
+    private static final Sort DEFAULT_SORT = Sort.by(Sort.Order.by("lastModifiedDate"));
+
     private final DealReactiveRepository dealReactiveRepository;
     private final ProductReactiveRepository productReactiveRepository;
 
     @Override
-    public Mono<Deal> findDealById(UUID dealId) {
-        return dealReactiveRepository
-                .findById(dealId)
-                .map(DealMapper::toApi);
+    public Mono<Deal> findById(UUID dealId, Long version, boolean loadRelations) {
+        final Mono<Deal> dealMono = dealReactiveRepository.findById(dealId)
+                .switchIfEmpty(Mono.error(new DealNotFoundException(dealId)))
+                .handle((deal, sink) -> {
+                    // Optimistic locking: pre-check
+                    if (version != null && !version.equals(deal.getVersion())) {
+                        // The version are different, return an error
+                        sink.error(new UnexpectedDealVersionException(version, deal.getVersion()));
+                    } else {
+                        Deal api = DealMapper.toApi(deal);
+                        sink.next(api);
+                    }
+                });
+        // Load the related objects, if requested
+        return loadRelations
+                ? dealMono.flatMap(this::loadRelations)
+                : dealMono;
     }
 
+    /**
+     * Find all deals
+     * @return Find all deals with the related objects loaded
+     */
     @Override
     public Flux<Deal> findAll() {
         return dealReactiveRepository
@@ -37,8 +60,15 @@ public class DealDbAdapter implements DealsSecondaryPort {
                 .map(DealMapper::toApi);
     }
 
+    /**
+     * Create a new deal
+     * @param deal Deal to be created
+     *
+     * @return the saved deal without the related entities
+     */
     @Override
-    public Mono<Deal> createDeal(Deal deal) {
+    @Transactional
+    public Mono<Deal> create(Deal deal) {
         return dealReactiveRepository
                 .save(DealMapper.toDb(deal))
                 .flatMap(savedDeal -> Flux.fromIterable(deal.getProducts())
@@ -54,13 +84,30 @@ public class DealDbAdapter implements DealsSecondaryPort {
                             savedDeal.setProducts(
                                     savedProducts.stream()
                                             .map(ProductMapper::toDb)
-                                            .collect(Collectors.toList())
+                                            .toList()
                             );
                             return savedDeal;
                         })
                         .then(Mono.just(savedDeal))
                 )
                 .map(DealMapper::toApi);
+    }
 
+    /**
+     * Load the objects related to an item
+     * @param deal Deal
+     * @return The deals with the loaded related objects (account, products)
+     */
+    private Mono<Deal> loadRelations(final Deal deal) {
+        // Load the products
+        return Mono.just(deal)
+                .map(DealMapper::toDb)
+                .zipWith(
+                        productReactiveRepository
+                                .findByDealId(deal.getId())
+                                .collectList()
+                )
+                .map(t -> t.getT1().setProducts(t.getT2()))
+                .map(DealMapper::toApi);
     }
 }
